--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/Normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
 </head>
 <body>
-<a href="/folders">Open folders page</a>
+<header class="header">
+    <div class="container">
+        <div class="headerWrapper">
+
+            <div class="headerBlock">
+                <a href="#goToIntro" class="headerLogo" style="color: white; text-decoration: none; font-size: 36px">
+                    Script service
+                </a>
+            </div>
+
+
+            <!--/headerBlock-->
+        </div>
+        <!--/headerWrapper-->
+    </div>
+    <!--/container-->
+</header>
+
+
+<section class="intro" id="goToIntro">
+    <div class="container">
+        <div class="introContent">
+            <h1 class="introTitle"><a style="color: white" href="/scripts">Open scripts page</a></h1>
+        </div>
+    </div>
+</section>
 </body>
 </html>
